Use list instead of array as list